--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <!-- <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
@@ -620,7 +620,8 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>
+    End Contact Section -->
 
   </main><!-- End #main -->
 
