--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+<!--           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
@@ -102,19 +102,21 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 2003</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New Delhi, INdia</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New Delhi, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>University:</strong> <span>IIITD</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>aadya21370@iiitd.ac.in</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              I'm a second-year studying Computer Science and Design at IIIT Delhi. Learning about the different kinds of technologies 
+              out there has always been my impetus. I have done projects in various diverse fields, such as making a Food and Drinks Menu 
+              using Python API, Game Development using libGDX and Java, UI/UX Designing via Adobe XD and Figma, and more. Web and App 
+              Development is also a field I've tinkered with and am interested in exploring.
             </p>
           </div>
         </div>
