--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
 
         <div class="section-title">
           <h2>About</h2>
-<!--           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
@@ -113,10 +112,10 @@
               </div>
             </div>
             <p>
-              I'm a second-year studying Computer Science and Design at IIIT Delhi. Learning about the different kinds of technologies 
-              out there has always been my impetus. I have done projects in various diverse fields, such as making a Food and Drinks Menu 
-              using Python API, Game Development using libGDX and Java, UI/UX Designing via Adobe XD and Figma, and more. Web and App 
-              Development is also a field I've tinkered with and am interested in exploring.
+              I'm a second-year studying Computer Science and Design at Indraprastha Institute of Information Technology, Delhi. Learning 
+              about the different kinds of technologies out there has always been my impetus. I have done projects in various diverse 
+              fields, such as making a Food and Drinks Menu using Python API, Game Development using libGDX and Java, UI/UX Designing via 
+              Adobe XD and Figma, and more. Web and App Development is also a field I've tinkered with and am interested in exploring.
             </p>
           </div>
         </div>
